--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -23,6 +23,7 @@
     "        notification.notify(\n",
     "            title = \"Please drink water :)\",\n",
     "            message = \"For healthy individuals, the average daily water for men is about 15.5 cups and for women about 11.5 cups.\",\n",
+    "            app_icon = \"C:\\desktopnotification\\icon\",\n",
     "            timeout = 10\n",
     "        )\n",
     "        time.sleep(60*60)  "
